[tool.poetry]
name = "dev-setup"
version = "0.1.0"
description = "A bare-bones Poetry setup including Dev tools"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# All entries after this, install and configure dev dependencies
[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "^1.7.5"}
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
flake8-pyproject = "^1.2.3"
isort = "^5.12.0"
pylint = "^2.17.2"

[tool.isort]
profile = "black"

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203"]
doctring-convention = "google"
